--- a/Prisoners-Dilemma/Tex/ref.bib
+++ b/Prisoners-Dilemma/Tex/ref.bib
@@ -126,3 +126,19 @@
   year={2002},
   publisher={MIT Press}
 }
+
+
+@article{wedekind1996human,
+  title={Human cooperation in the simultaneous and the alternating Prisoner's Dilemma: Pavlov versus Generous Tit-for-Tat},
+  author={Wedekind, Claus and Milinski, Manfred},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={93},
+  number={7},
+  pages={2686--2689},
+  year={1996},
+  month={Apr},
+  doi={10.1073/pnas.93.7.2686},
+  pmid={11607644},
+  pmcid={PMC39691},
+  url={https://doi.org/10.1073/pnas.93.7.2686}
+}
