--- a/Prisoners-Dilemma/Prisoners-Dilemma.tex
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.tex
@@ -269,9 +269,8 @@ Africa}
 
 
 
-\hypertarget{introduction}{%
 \section{\texorpdfstring{Introduction
-\label{Introduction}}{Introduction }}\label{introduction}}
+\label{Introduction}}{Introduction }}\label{introduction}
 
 The phrase horses for courses alludes to the fact that a racehorse
 performs best on a racecourse to which it is specifically suited. More
@@ -294,123 +293,8 @@ strategies fare in diverse settings, particularly focusing on the
 adaptability and effectiveness of Tit for Tat (TfT) variants, which have
 historically been prominent in such tournaments.
 
-Consider a standard prisoners' dilemma pay-off table:
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
-\hline
-\textbf{C (Cooperate)} & $(R, R)$ & $(S, T)$ \\
-\hline
-\textbf{D (Defect)} & $(T, S)$ & $(P, P)$ \\
-\hline
-\end{tabular}
-\caption{Prisoner's Dilemma Payoff Matrix with $R$, $P$, $S$, and $T$ Outcomes}
-\end{table}
-
-Adjusting the values of R (Reward for mutual cooperation), P (Punishment
-for mutual defection), S (Sucker's pay-off for cooperating while the
-other defects), and T (Temptation to defect when the other cooperates)
-is an example of within game pay-off adjustments. These adjustments
-might produce a new dominant strategy and our analysis aims to find if
-it does.
-
-From-game adjustments are a bit different and it considers the utility a
-player gets from the payoffs of its opponent.
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
-\hline
-\textbf{C (Cooperate)} & $(R(1-p) + Rp,     R(1-p) + Rp)$ & $(S(1-p) + Tp,     T(1-p)+Sp)$ \\
-\hline
-\textbf{D (Defect)} & $(T(1-p) + Sp,    S(1-p) + Tp)$ & $(P(1-p) + Pp,     P(1-p) + P)$ \\
-\hline
-\end{tabular}
-\caption{Prisoner's Dilemma Payoff Matrix}
-\end{table}
-
-The level \emph{p} here is adapted from Charness \& Rabin (2002) who
-created a utility function that captures various social preferences. In
-essence, \emph{p} is how much you care about your opponent's pay-offs as
-well as your own. In standard prisoners' dilemma games, this is 0 and
-thus people are purely self-interested. If we let our pay-offs be R = 3,
-T = 5, S = 0, and P = 3, then this situation in strategic form would
-look like:
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
-\hline
-\textbf{C (Cooperate)} & $(3, 3)$ & $(0, 5)$ \\
-\hline
-\textbf{D (Defect)} & $(5, 0)$ & $(1, 1)$ \\
-\hline
-\end{tabular}
-\caption{Prisoner's Dilemma Payoff Matrix for $p = 0$ (Self-interested person)}
-\end{table}
-
-However we can adjust the value of \emph{p} for people who are partially
-considerate of other people's outcomes, or we can make people
-egalitarian who care just as much for others as they do for themselves.
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
-\hline
-\textbf{C (Cooperate)} & $(3, 3)$ & $(1, 4)$ \\
-\hline
-\textbf{D (Defect)} & $(4, 1)$ & $(1, 1)$ \\
-\hline
-\end{tabular}
-\caption{Prisoner's Dilemma Payoff Matrix for $p = 0.2$ (Partially considers others' outcomes)}
-\end{table}
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
-\hline
-\textbf{C (Cooperate)} & $(3, 3)$ & $(2.5, 2.5)$ \\
-\hline
-\textbf{D (Defect)} & $(2.5, 2.5)$ & $(1, 1)$ \\
-\hline
-\end{tabular}
-\caption{Prisoner's Dilemma Payoff Matrix for $p = 0.5$ (Egalitarian person)}
-\end{table}
-
-\emph{p} could also take a negative value, which indicates a person is
-status-seeking and actively wants to bring down their opponent.
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
-\hline
-\textbf{C (Cooperate)} & $(3.6, 3.6)$ & $(-1, 6)$ \\
-\hline
-\textbf{D (Defect)} & $(6, -1)$ & $(0.8, 0.8)$ \\
-\hline
-\end{tabular}
-\caption{Prisoner's Dilemma Payoff Matrix for $p = -0.2$ (Negative influence by others' outcomes)}
-\end{table}
-
-It would be interesting to see under which values of \emph{p} the
-dominant strategy changes.
-
-\hypertarget{literature-review}{%
 \section{\texorpdfstring{Literature
-Review\label{litreview}}{Literature Review}}\label{literature-review}}
+Review\label{litreview}}{Literature Review}}\label{literature-review}
 
 The exploration of strategy choices within the framework of the
 prisoner's dilemma has garnered extensive attention in recent
@@ -455,31 +339,29 @@ strategy construction in indefinite games, emphasizing how players use
 heuristics and simplified mental models to navigate the uncertainty of
 the game's length. This aligns with Farrell \& Ware (1989) earlier work
 on evolutionary stability, where they explored how long-term strategies
-evolve to withstand deviations from equilibrium behaviours. From a
-computational perspective, García \& Veelen (2018) utilized simulations
-to demonstrate that no single strategy could consistently dominate in
-the repeated prisoner's dilemma, suggesting that adaptability and
-context-dependent strategy selection are key to success in such
-settings. Similarly, Gaudesi, Piccolo, Squillero \& Tonda (2016)
+evolve to withstand deviations from equilibrium behaviours.
+
+From a computational perspective, García \& Veelen (2018) utilized
+simulations to demonstrate that no single strategy could consistently
+dominate in the repeated prisoner's dilemma, suggesting that
+adaptability and context-dependent strategy selection are key to success
+in such settings. Similarly, Gaudesi, Piccolo, Squillero \& Tonda (2016)
 leveraged evolutionary modelling techniques to demonstrate how
-strategies evolve over time, competing in a dynamic landscape shaped by
-both cooperation and competition. The link between theoretical models
-and real-world application has also been a point of focus. Lange \&
-Baylor (2007) developed computerized tournaments to teach the mechanics
-of the repeated prisoner's dilemma, blending theory with practice and
-providing insights into how strategic choices might play out in
-educational settings. Such studies highlight the importance of teaching
-and learning mechanisms in understanding strategic behaviour in social
-dilemmas. Taken together, the contemporary literature on strategy
-selection in the prisoner's dilemma underscores the complexity of human
-decision-making in repeated interactions.
+strategies evolve, competing in a dynamic landscape shaped by both
+cooperation and competition.
 
-\hypertarget{game-construction}{%
-\section{Game Construction}\label{game-construction}}
+The link between theoretical models and real-world applications has also
+been a point of focus. Lange \& Baylor (2007) developed computerized
+tournaments to teach the mechanics of the repeated prisoner's dilemma,
+blending theory with practice and providing insights into how strategic
+choices might play out in educational settings. Such studies highlight
+the importance of teaching and learning mechanisms in understanding
+strategic behaviour in social dilemmas. Taken together, the contemporary
+literature on strategy selection in the prisoner's dilemma underscores
+the complexity of human decision-making in repeated interactions.
 
-\hypertarget{the-basic-repeated-prisoners-dilemma}{%
-\subsection{The Basic Repeated Prisoners
-dilemma}\label{the-basic-repeated-prisoners-dilemma}}
+\section{The Standard Prisoners
+Dilemma}\label{the-standard-prisoners-dilemma}
 
 This paper conducts a tournament modelled after Axelrod (1980) but
 incorporates a wider array of strategies. A total of 25 strategies are
@@ -541,7 +423,7 @@ three consecutive rounds if the opponent defects. It always begins with
 cooperation, but when an opponent defects, Prober immediately retaliates
 with three rounds of defection before returning to cooperation. This
 approach aims to probe the opponent's willingness to adjust their
-behaviour in response to repeated defection, while maintaining a
+behaviour in response to repeated defection while maintaining a
 cooperative default when unprovoked.
 
 Forgiving Tester emphasizes cooperation but incorporates occasional
@@ -584,15 +466,14 @@ played and is given in the table below:
 \caption{Prisoner's Dilemma Payoff Matrix}
 \end{table}
 
-\hypertarget{the-repeated-prisoners-dilemma-with-social-preferences}{%
-\subsection{The Repeated Prisoners Dilemma With Social
-Preferences}\label{the-repeated-prisoners-dilemma-with-social-preferences}}
+\subsection{Introducing Social
+Preferences}\label{introducing-social-preferences}
 
-This game is played exactly the same as above except now Social
-Preferences are taken into account. From-game adjustments are a bit
-different and it considers the utility a player gets from the payoffs of
-its opponent. The standard Prisoners Dilemma payoff Matrix with
-from-game adjustments is given below:
+This game is played the same as above except now Social Preferences are
+taken into account. From-game adjustments are a bit different and it
+considers the utility a player gets from the payoffs of its opponent.
+The standard Prisoners Dilemma payoff Matrix with from-game adjustments
+is given below:
 
 \begin{table}[ht]
 \centering
@@ -613,15 +494,13 @@ created a utility function that captures various social preferences. In
 essence, \emph{p} is how much you care about your opponent's pay-offs as
 well as your own. This paper will conduct the tournament as above for a
 range of \emph{p} values starting from \emph{p} = -1 where individuals
-are status seeking to \emph{p} = 0.5 where indivduals care half as much
-about themselves as the do about others
+are status seeking to \emph{p} = 0.5 where individuals care half as much
+about themselves as they do about others
 
-\hypertarget{game-results}{%
-\section{Game Results}\label{game-results}}
+\section{Game Results}\label{game-results}
 
-\hypertarget{the-standard-prisoners-dilemma-tournament}{%
 \subsection{The Standard Prisoners Dilemma
-Tournament}\label{the-standard-prisoners-dilemma-tournament}}
+Tournament}\label{the-standard-prisoners-dilemma-tournament}
 
 After the conclusion of the tournament, most interestingly unlike
 Axelrod (1980), this paper does not find Tft as the winner in the
@@ -629,14 +508,14 @@ standard Repeated Prisoners Dilemma. Table 4.1 gives the standard
 tournament without social preferences. The winner of the tournament was
 Probing Adjuster with 13575 points followed by Tft with Randomization
 which had 12887 points and Bully coming in third with 12869 points. In
-this game Tft came fourth which leads us to believe similarly to Axelrod
-(1980) that Tft may have won due to the other strategies in the
+this game, Tft came fourth which leads us to believe similarly to
+Axelrod (1980) that Tft may have won due to the other strategies in the
 tournament. The winner of the Prisoners Dilemma is highly dependent on
 the strategies in the tournament. Always Cooperate and Random 90\% came
 in second last and last respectively. This is as expected as the
 tournament included strategies that took advantage of other strategies
 which always cooperated. Most interestingly, if the adaptive strategies
-are removed then the Grim/Trigger strategy would have won the game.
+were removed then the Grim/Trigger strategy would have won the game.
 Also, even though Probing Adjuster won the tournament, the group of
 adaptive strategies as a whole performed worse than the group of Tit for
 Tat variant strategies. This result shows the robustness of Tit for Tat
@@ -649,78 +528,54 @@ maintaining high scores overall.
 
 
 \vfill
-\begin{table}[!h]
+\begingroup\fontsize{5}{7}\selectfont
 
-\caption{\label{tab:unnamed-chunk-3}Tournament Payoff Matrix for p= 0}
-\centering
-\resizebox{\linewidth}{!}{
-\fontsize{5}{7}\selectfont
-\begin{tabular}[t]{>{}l|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.25cm}|>{\raggedleft\arraybackslash}p{0.2cm}|>{\raggedleft\arraybackslash}p{0.2cm}}
-\hline
-\multicolumn{1}{c|}{ } & \multicolumn{25}{c|}{Payoff Against Other Strategies} & \multicolumn{1}{c|}{Total} & \multicolumn{1}{c}{Rank} \\
-\cline{2-26} \cline{27-27} \cline{28-28}
-  & AC & AD & TfT & Tf2T & TfTF & TfTR & P & G/T & B & RD & ADe & APe & PA & FT & P & CR & PC & DC & BG & RG & R0.1 & R0.25 & R0.5 & R0.75 & R0.9 &   &  \\
-\hline
+\begin{longtable}[t]{>{}l>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.25cm}>{\raggedleft\arraybackslash}p{0.2cm}>{\raggedleft\arraybackslash}p{0.2cm}}
+\caption{\label{tab:unnamed-chunk-3}Tournament Payoff Matrix for p= 0}\\
+\toprule
+\multicolumn{1}{c}{ } & \multicolumn{25}{c}{Payoff Against Other Strategies} & \multicolumn{1}{c}{Total} & \multicolumn{1}{c}{Rank} \\
+\cmidrule(l{3pt}r{3pt}){2-26} \cmidrule(l{3pt}r{3pt}){27-27} \cmidrule(l{3pt}r{3pt}){28-28}
+ & AC & AD & TfT & Tf2T & TfTF & TfTR & P & G/T & B & RD & ADe & APe & PA & FT & P & CR & PC & DC & BG & RG & R0.1 & R0.25 & R0.5 & R0.75 & R0.9 &  & \\
+\midrule
 \textbf{Always Cooperate} & 600 & 0 & 600 & 600 & 600 & 600 & 600 & 600 & 147 & 600 & 600 & 501 & 3 & 453 & 600 & 483 & 291 & 261 & 600 & 600 & 69 & 156 & 300 & 420 & 519 & \textcolor{blue}{\textbf{10803}} & \textcolor{red}{\textbf{24}}\\
-\hline
 \textbf{Always Defect} & 1000 & 200 & 204 & 208 & 276 & 204 & 204 & 204 & 396 & 992 & 204 & 212 & 208 & 212 & 1000 & 212 & 664 & 600 & 204 & 1000 & 276 & 392 & 648 & 792 & 896 & \textcolor{blue}{\textbf{11408}} & \textcolor{red}{\textbf{20}}\\
-\hline
 \textbf{Tit for Tat} & 600 & 199 & 600 & 600 & 600 & 600 & 600 & 600 & 346 & 600 & 600 & 567 & 399 & 551 & 600 & 561 & 441 & 426 & 600 & 600 & 250 & 344 & 432 & 531 & 580 & \textcolor{blue}{\textbf{12827}} & \textcolor{red}{\textbf{4}}\\
-\hline
 \textbf{Tit for Two Tats} & 600 & 198 & 600 & 600 & 600 & 600 & 600 & 600 & 296 & 600 & 600 & 501 & 298 & 453 & 600 & 483 & 372 & 370 & 600 & 600 & 244 & 288 & 394 & 480 & 548 & \textcolor{blue}{\textbf{12125}} & \textcolor{red}{\textbf{15}}\\
-\hline
 \textbf{Tit for Tat with Forgiveness} & 600 & 183 & 600 & 600 & 600 & 600 & 600 & 600 & 322 & 600 & 600 & 561 & 370 & 539 & 600 & 553 & 408 & 411 & 600 & 600 & 249 & 321 & 403 & 527 & 571 & \textcolor{blue}{\textbf{12618}} & \textcolor{red}{\textbf{8}}\\
-\hline
+\addlinespace
 \textbf{Tit for Tat with Randomisation} & 600 & 199 & 600 & 600 & 600 & 600 & 600 & 600 & 346 & 600 & 600 & 567 & 399 & 551 & 600 & 561 & 422 & 436 & 600 & 600 & 252 & 357 & 478 & 542 & 577 & \textcolor{blue}{\textbf{12887}} & \textcolor{red}{\textbf{2}}\\
-\hline
 \textbf{Pavlov} & 600 & 199 & 600 & 600 & 600 & 600 & 600 & 600 & 346 & 600 & 600 & 567 & 399 & 551 & 600 & 561 & 453 & 434 & 600 & 600 & 243 & 325 & 442 & 519 & 582 & \textcolor{blue}{\textbf{12821}} & \textcolor{red}{\textbf{5}}\\
-\hline
 \textbf{Grim/Trigger} & 600 & 199 & 600 & 600 & 600 & 600 & 600 & 600 & 395 & 600 & 600 & 223 & 205 & 219 & 600 & 221 & 607 & 575 & 600 & 600 & 263 & 399 & 551 & 823 & 933 & \textcolor{blue}{\textbf{12813}} & \textcolor{red}{\textbf{6}}\\
-\hline
 \textbf{Bully} & 902 & 151 & 351 & 551 & 399 & 351 & 351 & 155 & 298 & 894 & 155 & 683 & 355 & 751 & 902 & 631 & 533 & 554 & 348 & 902 & 230 & 319 & 556 & 700 & 847 & \textcolor{blue}{\textbf{12869}} & \textcolor{red}{\textbf{3}}\\
-\hline
 \textbf{Retaliatory Defector} & 600 & 2 & 600 & 600 & 600 & 600 & 600 & 600 & 149 & 600 & 600 & 505 & 9 & 457 & 600 & 487 & 263 & 283 & 600 & 600 & 74 & 122 & 319 & 463 & 541 & \textcolor{blue}{\textbf{10874}} & \textcolor{red}{\textbf{23}}\\
-\hline
+\addlinespace
 \textbf{Adaptive Defector} & 600 & 199 & 600 & 600 & 600 & 600 & 600 & 600 & 395 & 600 & 600 & 501 & 205 & 453 & 600 & 483 & 448 & 420 & 600 & 600 & 276 & 387 & 457 & 487 & 548 & \textcolor{blue}{\textbf{12459}} & \textcolor{red}{\textbf{10}}\\
-\hline
 \textbf{Adaptive Peacekeep} & 666 & 197 & 567 & 666 & 576 & 567 & 567 & 213 & 263 & 660 & 666 & 534 & 256 & 503 & 666 & 543 & 418 & 400 & 572 & 666 & 223 & 285 & 393 & 483 & 600 & \textcolor{blue}{\textbf{12150}} & \textcolor{red}{\textbf{14}}\\
-\hline
 \textbf{Probing Adjuster} & 998 & 198 & 404 & 553 & 436 & 404 & 404 & 205 & 345 & 989 & 205 & 591 & 400 & 557 & 998 & 643 & 587 & 544 & 325 & 998 & 264 & 369 & 549 & 719 & 890 & \textcolor{blue}{\textbf{13575}} & \textcolor{red}{\textbf{1}}\\
-\hline
 \textbf{Forgiving Tester} & 698 & 197 & 551 & 698 & 563 & 551 & 551 & 209 & 246 & 692 & 698 & 583 & 297 & 502 & 698 & 572 & 452 & 431 & 565 & 698 & 239 & 275 & 393 & 543 & 631 & \textcolor{blue}{\textbf{12533}} & \textcolor{red}{\textbf{9}}\\
-\hline
 \textbf{Prober} & 600 & 0 & 600 & 600 & 600 & 600 & 600 & 600 & 147 & 600 & 600 & 501 & 3 & 453 & 600 & 483 & 324 & 303 & 600 & 600 & 63 & 156 & 318 & 492 & 540 & \textcolor{blue}{\textbf{10983}} & \textcolor{red}{\textbf{21}}\\
-\hline
+\addlinespace
 \textbf{Cautious Rebuilder} & 678 & 197 & 561 & 678 & 576 & 561 & 561 & 211 & 276 & 672 & 678 & 573 & 238 & 522 & 678 & 522 & 413 & 385 & 554 & 678 & 229 & 270 & 402 & 541 & 641 & \textcolor{blue}{\textbf{12295}} & \textcolor{red}{\textbf{11}}\\
-\hline
 \textbf{Progressive Cooperator} & 798 & 102 & 439 & 557 & 484 & 417 & 414 & 105 & 271 & 794 & 444 & 546 & 203 & 503 & 790 & 504 & 417 & 467 & 289 & 798 & 159 & 247 & 506 & 658 & 742 & \textcolor{blue}{\textbf{11654}} & \textcolor{red}{\textbf{18}}\\
-\hline
 \textbf{Deminishing Cooperator} & 784 & 109 & 438 & 536 & 454 & 432 & 447 & 141 & 263 & 799 & 410 & 543 & 235 & 487 & 818 & 522 & 499 & 431 & 619 & 798 & 176 & 262 & 435 & 653 & 715 & \textcolor{blue}{\textbf{12006}} & \textcolor{red}{\textbf{16}}\\
-\hline
 \textbf{Bounded Gradient} & 600 & 199 & 600 & 600 & 600 & 600 & 600 & 600 & 342 & 600 & 600 & 564 & 245 & 520 & 600 & 545 & 513 & 325 & 600 & 600 & 273 & 374 & 442 & 540 & 566 & \textcolor{blue}{\textbf{12648}} & \textcolor{red}{\textbf{7}}\\
-\hline
 \textbf{Recent Gradient} & 600 & 0 & 600 & 600 & 600 & 600 & 600 & 600 & 147 & 600 & 600 & 501 & 3 & 453 & 600 & 483 & 285 & 312 & 600 & 600 & 84 & 150 & 291 & 462 & 549 & \textcolor{blue}{\textbf{10920}} & \textcolor{red}{\textbf{22}}\\
-\hline
+\addlinespace
 \textbf{Random 10\%} & 960 & 184 & 255 & 340 & 354 & 251 & 267 & 182 & 381 & 966 & 184 & 325 & 266 & 375 & 938 & 351 & 589 & 560 & 242 & 976 & 238 & 381 & 542 & 812 & 882 & \textcolor{blue}{\textbf{11801}} & \textcolor{red}{\textbf{17}}\\
-\hline
 \textbf{Random 25\%} & 886 & 149 & 367 & 452 & 415 & 353 & 354 & 156 & 329 & 900 & 233 & 533 & 314 & 406 & 900 & 508 & 553 & 498 & 353 & 904 & 216 & 364 & 564 & 695 & 809 & \textcolor{blue}{\textbf{12211}} & \textcolor{red}{\textbf{13}}\\
-\hline
 \textbf{Random 50\%} & 794 & 100 & 428 & 654 & 497 & 460 & 469 & 105 & 260 & 803 & 480 & 634 & 259 & 576 & 806 & 565 & 427 & 467 & 448 & 806 & 188 & 257 & 445 & 625 & 710 & \textcolor{blue}{\textbf{12263}} & \textcolor{red}{\textbf{12}}\\
-\hline
 \textbf{Random 75\%} & 714 & 59 & 538 & 656 & 538 & 525 & 536 & 77 & 217 & 692 & 643 & 609 & 151 & 536 & 726 & 574 & 377 & 358 & 530 & 704 & 107 & 224 & 325 & 532 & 660 & \textcolor{blue}{\textbf{11608}} & \textcolor{red}{\textbf{19}}\\
-\hline
 \textbf{Random 90\%} & 630 & 21 & 570 & 634 & 581 & 572 & 577 & 64 & 169 & 628 & 631 & 541 & 94 & 471 & 620 & 517 & 319 & 324 & 555 & 634 & 76 & 147 & 329 & 460 & 591 & \textcolor{blue}{\textbf{10755}} & \textcolor{red}{\textbf{25}}\\
-\hline
-\end{tabular}}
-\end{table}
+\bottomrule
+\end{longtable}
+\endgroup{}
 
 \vfill
 
 \end{landscape}
 
-\hypertarget{the-prisoners-dilemma-tournament-with-social-preferences}{%
 \subsection{The Prisoners Dilemma Tournament with Social
-Preferences}\label{the-prisoners-dilemma-tournament-with-social-preferences}}
+Preferences}\label{the-prisoners-dilemma-tournament-with-social-preferences}
 
 Table 4.2 gives the standings of the tournament across different social
 preferences. The rankings of strategies change across these different
@@ -734,16 +589,16 @@ indicating that purely selfish strategies are less effective when
 players care about the well-being of others. Tit for Tat maintains a
 relatively stable performance across various \emph{p} values, reflecting
 its robustness as a strategy that adapts well to different social
-preferences. This holds true for the TfT variations in general. Probing
+preferences. This holds for the TfT variations in general. Probing
 Adjuster, which ranked first when \emph{p} = -0.1, drops significantly
 as p increases, indicating that more complex strategies designed for
 selfish environments are less effective in altruistic settings.
 
 \begin{table}[!h]
-
+\centering
 \caption{\label{tab:unnamed-chunk-4}Strategy Rankings Across Different p Values}
 \centering
-\resizebox{\linewidth}{!}{
+\resizebox{\ifdim\width>\linewidth\linewidth\else\width\fi}{!}{
 \fontsize{5}{7}\selectfont
 \begin{tabular}[t]{>{\centering\arraybackslash}p{4cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}}
 \toprule
@@ -826,10 +681,10 @@ which perform well in self-interested settings, see their points drop as
 cooperative contexts.
 
 \begin{table}[!h]
-
+\centering
 \caption{\label{tab:unnamed-chunk-6}Strategy Rankings Across All p-Values}
 \centering
-\resizebox{\linewidth}{!}{
+\resizebox{\ifdim\width>\linewidth\linewidth\else\width\fi}{!}{
 \fontsize{8}{10}\selectfont
 \begin{tabular}[t]{>{\centering\arraybackslash}p{2cm}>{\centering\arraybackslash}p{5cm}>{\centering\arraybackslash}p{3cm}}
 \toprule
@@ -872,15 +727,15 @@ struggle. TfT variant strategies have shown to be robust under varying
 social preferences as can be seen in Table 4.3. Tft has the highest
 average points across the differing p-values showing its robustness in
 the face of differing social preferences. These findings once again
-provide insight into the strength of the TfT strategy. In Prisoners
+provide insight into the strength of the TfT strategy. In Prisoner's
 Dilemma games where preferences may be hidden, TfT would according to
 these findings perform the best.
 
 \begin{table}[!h]
-
+\centering
 \caption{\label{tab:unnamed-chunk-7}Strategy Values Across Different p Values}
 \centering
-\resizebox{\linewidth}{!}{
+\resizebox{\ifdim\width>\linewidth\linewidth\else\width\fi}{!}{
 \fontsize{5}{7}\selectfont
 \begin{tabular}[t]{>{\centering\arraybackslash}p{4cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}}
 \toprule
@@ -921,8 +776,7 @@ Strategy & -0.1 & -0.05 & 0 & 0.05 & 0.1 & 0.15 & 0.2 & 0.25 & 0.3 & 0.35 & 0.4 
 \end{tabular}}
 \end{table}
 
-\hypertarget{conclusion}{%
-\section{Conclusion}\label{conclusion}}
+\section{Conclusion}\label{conclusion}
 
 The tournament results reveal that strategic success in the Prisoner's
 Dilemma is highly dependent on the composition of competing strategies
@@ -938,68 +792,67 @@ environments.
 
 \newpage
 
-\hypertarget{references}{%
-\section*{References}\label{references}}
+\section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
-\hypertarget{refs}{}
-\begin{CSLReferences}{1}{0}
-\leavevmode\vadjust pre{\hypertarget{ref-axelrod1980effective}{}}%
+\phantomsection\label{refs}
+\begin{CSLReferences}{1}{1}
+\bibitem[\citeproctext]{ref-axelrod1980effective}
 Axelrod, R. 1980. Effective choice in the prisoner's dilemma. \emph{The
 Journal of Conflict Resolution}. 24(1):3--25. {[}Online{]}, Available:
 \url{http://www.jstor.org/stable/173932}.
 
-\leavevmode\vadjust pre{\hypertarget{ref-dalbo2019strategy}{}}%
+\bibitem[\citeproctext]{ref-dalbo2019strategy}
 Bó, P.D. \& Fréchette, G.R. 2019.
 \href{https://doi.org/10.1257/aer.20181480}{Strategy choice in the
 infinitely repeated prisoner's dilemma}. \emph{American Economic
 Review}. 109(11):3929--3952.
 
-\leavevmode\vadjust pre{\hypertarget{ref-breitmoser2015cooperation}{}}%
+\bibitem[\citeproctext]{ref-breitmoser2015cooperation}
 Breitmoser, Y. 2015.
 \href{https://doi.org/10.1257/aer.20130675}{Cooperation, but no
 reciprocity: Individual strategies in the repeated prisoner's dilemma}.
 \emph{American Economic Review}. 105(9):2882--2910.
 
-\leavevmode\vadjust pre{\hypertarget{ref-charness2002understanding}{}}%
+\bibitem[\citeproctext]{ref-charness2002understanding}
 Charness, G. \& Rabin, M. 2002. Understanding social preferences with
 simple tests. \emph{The quarterly journal of economics}.
 117(3):817--869.
 
-\leavevmode\vadjust pre{\hypertarget{ref-embrey2017cooperation}{}}%
+\bibitem[\citeproctext]{ref-embrey2017cooperation}
 Embrey, M., Fréchette, G.R. \& Yuksel, S. 2018.
 \href{https://doi.org/10.1093/qje/qjx033}{Cooperation in the finitely
 repeated prisoner's dilemma}. \emph{The Quarterly Journal of Economics}.
 133(2):509--551.
 
-\leavevmode\vadjust pre{\hypertarget{ref-farrell1988evolutionary}{}}%
+\bibitem[\citeproctext]{ref-farrell1988evolutionary}
 Farrell, J. \& Ware, R. 1989. Evolutionary stability in the repeated
 prisoner's dilemma. \emph{Journal of Economic Theory}. 47(1):1--12.
 
-\leavevmode\vadjust pre{\hypertarget{ref-garcia2018no}{}}%
+\bibitem[\citeproctext]{ref-garcia2018no}
 García, J. \& Veelen, M. van. 2018.
 \href{https://doi.org/10.3389/frobt.2018.00102}{No strategy can win in
 the repeated prisoner's dilemma: Linking game theory and computer
 simulations}. \emph{Frontiers in Robotics and AI}. 5:102.
 
-\leavevmode\vadjust pre{\hypertarget{ref-gaudesi2016exploiting}{}}%
+\bibitem[\citeproctext]{ref-gaudesi2016exploiting}
 Gaudesi, M., Piccolo, E., Squillero, G. \& Tonda, A. 2016. Exploiting
 evolutionary modeling to prevail in iterated prisoner's dilemma
 tournaments. \emph{IEEE Transactions on Computational Intelligence and
 AI in Games}. 8(3):235--247.
 
-\leavevmode\vadjust pre{\hypertarget{ref-kreps1982rational}{}}%
+\bibitem[\citeproctext]{ref-kreps1982rational}
 Kreps, D.M., Milgrom, P., Roberts, J. \& Wilson, R. 1982. Rational
 cooperation in the finitely repeated prisoners' dilemma. \emph{Journal
 of Economic Theory}. 27(2):245--252.
 
-\leavevmode\vadjust pre{\hypertarget{ref-lange2007teaching}{}}%
+\bibitem[\citeproctext]{ref-lange2007teaching}
 Lange, C. \& Baylor, A.L. 2007.
 \href{https://doi.org/10.3200/JECE.38.4.407-418}{Teaching the repeated
 prisoner's dilemma with a computerized tournament}. \emph{The Journal of
 Economic Education}. 38(4):407--418.
 
-\leavevmode\vadjust pre{\hypertarget{ref-romero2018constructing}{}}%
+\bibitem[\citeproctext]{ref-romero2018constructing}
 Romero, J. \& Rosokha, Y. 2018.
 \href{https://doi.org/10.1016/j.euroecorev.2018.02.008}{Constructing
 strategies in the indefinitely repeated prisoner's dilemma game}.
